<resources>
    <string name="app_name">AdvancedSampleGroupApplication</string>

    <string name="app_name_short">PhotoAffix</string>

    <string name="affix_zero">Affix (0)</string>
    <string name="affix_x">Affix (%1$d)</string>
    <string name="clear">Clear</string>
    <string name="stack">Stack</string>
    <string name="stack_horizontally">Stack horizontally</string>
    <string name="stack_vertically">Stack vertically</string>
    <string name="scale_priority_on">Scale smaller images to largest</string>
    <string name="scale_priority_off">Scale larger images to smallest</string>
    <string name="error">Error</string>
    <string name="affixing_your_photos">Affixing your photos…</string>
    <string name="retrieving_photo">Retrieving photo…</string>
    <string name="share">Share</string>
    <string name="open_with">Open With…</string>
    <string name="edit_with">Edit With…</string>
    <string name="share_using">Share Using…</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this photo?</string>
    <string name="yes">Yes</string>
    <string name="deleting">Deleting…</string>
    <string name="background_fill_color">Background fill</string>
    <string name="background_fill_color_title">Background Fill Color</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="no_photos_found">No local photos were found!</string>
    <string name="need_two_or_more">You need two or more images!</string>
    <string name="image_spacing_x">Image spacing (%1$d, %2$d)</string>
    <string name="image_spacing">Image Spacing</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="about">About</string>
    <string name="dismiss">Dismiss</string>
    <string name="about_body"><![CDATA[
        PhotoAffix, designed by <b>Aidan Follestad</b>.<br/>
        <a href=\'http://aidanfollestad.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/afollestad\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+AidanFollestad\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/afollestad\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/afollestad\'>LinkedIn</a><br/><br/>
        Icon by <a href=\'https://plus.google.com/+EduardoPratti\'>Eduardo Pratti</a>.<br/>
        Play Store feature graphic by <a href=\'https://plus.google.com/+RikiDev\'>RB Designs</a>.<br/>
        Contributions from <a href=\'https://plus.google.com/+DanielCiao\'>Daniel Ciao</a>.<br/><br/>
        This project is <a href=\'https://github.com/afollestad/photo-affix\'>open source</a>.<br/>
        Join the <a href=\'https://plus.google.com/communities/114777506465785892824\'>Google+ community</a>, and
        <a href=\'https://play.google.com/apps/testing/com.afollestad.photoaffix\'>opt-in to beta testing</a>!
    ]]></string>

    <string name="firstCard">Behavior를 사용하기 위해서는 CoordinatorLayout을 통해서 사용되는데, CoordinatorLayout은 자식뷰의 스크롤의 변화 상태를 다른 자식뷰들에게 전달 해주는 역할을 합니다. 좀더 쉽게 말해 NestedScrollView나 RecyclerView등에 스크롤의 상태를 판단하여 정의된 반응을 하기위한 View에 Behavior를 등록하면 됩니다.</string>
    <string name="secondCard">이해를 돕기위해 안드로이드 서포트 라이브러리에서 제공해주는 Behavior를 한번 보겠습니다. NestedScrollView에 layout_behavior에 AppBarLayout$ScrollingViewBehavior가 정의가 되어있습니다. NestedScrollView의 반응에 따라 AppBarLayout이 반응됩니다.
        CoordinatorLayout는 NestedScrollView가 스크롤시 layout_behavior에 정의된 레이아웃으로 스크롤 정보를 전달 하는 역할을 합니다. 그럼 AppBarLayout의 ScrollingViewBehavior가 정보를 받아서 AppBarLayout 자신을 변형하도록 하는 구조입니다.</string>

    <string name="thirdCard">
        CoordinatorLayout이 스크롤되는 것은 Behavior에 구현된 NestedScrollingParent를 통해 전달 됩니다. 즉, CoordinatorLayout는 NestedScrollingParent가 구현되어 있으며 스크롤 되는 View들은 NestedScrollingChild가 구현되어 있어야 Behavior가 전달 됩니다. 그렇기 때문에 기존의 ScrollView나 ListView는 NestedScrollingChild가 구현되어 있지 않아 Behavior를 통해 스크롤 정보전달이 되지 않습니다.
        이렇게 CoordinatorLayout의 역할과 Behavior의 관계를 알고 있다면 Behavior를 커스텀해서 구현하는데 전혀 문제 없을 것입니다.
    </string>
    <string name="output_settings">Output Settings</string>
    <string name="defaultStr">Default</string>
    <string name="continueStr">Continue</string>
    <string name="remove">Remove</string>
    <string name="background_fill_color_transparent">Background fill (transparent)</string>
    <string name="format">Format:</string>
    <string name="quality">Quality:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="errorID">아이디를 입력</string>
    <string name="errorPassword">패스워드를 입력하세요</string>
    <string name="errorAmount">수량을 입력하세요</string>


    <string name="hinID">아이디</string>
    <string name="hintPassword">패스워드</string>
    <string name="hintAmount">수량</string>


    <string name="com.crashlytics.useFirebaseAppId">true</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

</resources>
